--- a/styles.css
+++ b/styles.css
@@ -85,13 +85,14 @@ button:hover {
   width: 40%;
 }
 .main-content > img {
-  height: 50%;
-  width: 50%;
+  height: 55%;
+  width: 55%;
 }
 
 /* Section 3 */
 .footer {
   padding-right: 50px;
+  padding-bottom: 30px;
 }
 .footer > i {
   font-size: 18px;
@@ -169,8 +170,8 @@ button:hover {
     background: url("images/bg-mobile.svg");
     background-color: var(--primary);
     background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    background-size: auto;
+    background-position: top;
   }
 
   h1 {
@@ -190,6 +191,7 @@ button:hover {
     margin-top: 30px;
     width: 130px;
     margin-left: 30px;
+    margin-bottom: 50px;
   }
   .main-content > img {
     height: 80%;
@@ -203,10 +205,12 @@ button:hover {
   }
   .main-content > div {
     margin: 0 30px;
+    width: -webkit-fill-available;
   }
   .footer {
     justify-content: center;
-    margin: 100px 0 50px;
+    margin: 60px 0 20px;
+    padding-right: 0;
   }
 
   .footer > i {
